--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
   </div>
 
   <header class="header">
-    <div class="logo">Anada Electrical</div>
+    <div class="logo">
+      <img src="images/logos/Anada (100 x 50 px) (192 x 48 px) (256 x 64 px) (256 x 256 px).svg" alt="Anada Electrical Logo" class="logo-icon">
+      <div>
+        <div class="logo-text-line1">ANADA</div>
+        <div class="logo-text-line2">ELECTRICAL & SECURITY</div>
+      </div>
+    </div>
     <nav>
       <ul class="nav-links center">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="about.html">Why Choose Us</a></li>
-        <li><a href="areas.html">Service Areas</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <!--li><a href="about.html">Why Choose Us</a></li-->
+        <!--li><a href="areas.html">Service Areas</a></li-->
+        <li><a href="#contact-us">Contact</a></li>
       </ul>
     </nav>
     <a class="call-btn" href="tel:+64224610437">📞 Call Us</a>
@@ -42,7 +48,7 @@
       </div>
     </section>
 
-    <section class="services-preview">
+    <section id="services" class="services-preview">
       <h2 class="animate-fade-in">Our Services</h2>
       <div class="services-grid limited-width">
 
@@ -101,7 +107,7 @@
       <br />
     </section>
 
-    <section class="cta-contact">
+    <section id="contact-us" class="cta-contact">
       <h2 class="animate-fade-in">Get in Touch</h2>
       <p class="animate-fade-in">Contact Anada Electrical today for a free consultation.</p>
       <a href="mailto:anadaelectrical@gmail.com?subject=Enquiry&body=Hi%20Anada%20Electrical,"
