--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <header class="header">
     <div class="logo">
-      <img src="images/logos/Anada (100 x 50 px) (192 x 48 px) (256 x 64 px) (256 x 256 px).svg" alt="Anada Electrical Logo" class="logo-icon">
+      <img src="images/logos/logo.svg" alt="Anada Electrical Logo" class="logo-icon">
       <div>
         <div class="logo-text-line1">ANADA</div>
         <div class="logo-text-line2">ELECTRICAL & SECURITY</div>
@@ -110,10 +110,22 @@
     <section id="contact-us" class="cta-contact">
       <h2 class="animate-fade-in">Get in Touch</h2>
       <p class="animate-fade-in">Contact Anada Electrical today for a free consultation.</p>
+
+      <a href="tel:+64224610437" class="btn bg-red full-width-btn animate-fade-in" title="Call us at +64 22 461 0437">
+        Call Us
+      </a>
+
+      <a href="https://wa.me/64224610437?text=Hi%20Anada%20Electrical%2C%20I%27d%20like%20to%20enquire%20about%20your%20services."
+        class="btn bg-green full-width-btn animate-fade-in" title="Chat with us on WhatsApp: +64 22 461 0437">
+        WhatsApp Us
+      </a>
+
       <a href="mailto:anadaelectrical@gmail.com?subject=Enquiry&body=Hi%20Anada%20Electrical,"
-        class="btn bg-red full-width-btn animate-fade-in">Email Us</a>
-      <a href="tel:+64224610437" class="btn bg-green full-width-btn full-width-btn animate-fade-in">Call Us</a>
+        class="btn bg-yellow f-color-black full-width-btn animate-fade-in" title="Email us at anadaelectrical@gmail.com">
+        Email Us
+      </a>
     </section>
+
     <!--div class="btn-container">
         <a href="services.html" class="btn bg-red">Explore All Services</a>
       </div>
