--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Anada Electrical and Securities Ltd. All rights reserved.</p>
+    <p>&copy; <span id="copyrightYear">2023</span> Anada Electrical and Securities Ltd. All rights reserved.</p>
   </footer>
 
 
@@ -174,6 +174,11 @@
         observer.observe(element);
       });
     });
+
+    window.onload = ()=> {
+      //update copyright year
+      document.getElementById('copyrightYear').innerText = (new Date()).getFullYear().toString();
+    }
 
   </script>
 
